Added descriptions for strawberry shortcake & baked salmon recipe

--- a/recipes/baked-salmon.html
+++ b/recipes/baked-salmon.html
@@ -10,6 +10,15 @@
     <h1>A Tasty Baked Salmon Recipe</h1>
     <!--image-->
     <img src="https://hips.hearstapps.com/hmg-prod/images/baked-salmon-recipe-1646256324.jpg?crop=0.670xw:1.00xh;0.0897xw,0&resize=1200:*" alt="a picture of delicious baked salmon">
+    <!--description-->
+    <p>
+        This homemade strawberry shortcake recipe is a delightful and nostalgic dessert that will transport you back to summertime fun and cherished
+        family traditions. The light and airy shortcake pairs perfectly with layers of lemon-marinated strawberries and fresh homemade whipped cream.
+        This recipe is so easy to prepare and SO delicious. The combination of the fluffy and melt-in-your-mouth shortcakes, the burst of flavor 
+        from the lemon-marinated strawberries, and the creamy whipped cream is simply irresistible. Whether you're serving it at a family gathering
+        or indulging in a special treat for yourself, this classic strawberry shortcake recipe is sure to bring joy and satisfy your sweet tooth.
+
+    </p>
     <!--ingredients-->
     <h2>Ingredients:</h2>
     <ul>
